# pythonic

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configuration/: sharepoint_config.py
fixtures/: fixtures.py
