[tool.poetry]
name = "pythonic"
version = "0.1.0"
description = ""
authors = ["daniel.adele <102369541+daniel-adele@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Office365-REST-Python-Client = "^2.3.13"
pylint = "^2.14.5"


[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
mypy = "^0.971"
black = "^22.6.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
include_trailing_comma = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
# https://pylint.pycqa.org/en/1.6.0/options.html
variable-rgx = "[a-z_][a-z0-9_]{0,40}$"

[tool.pylint.global]
disable = ["W0511"]
output-format = "colorized"


[tool.pytest.ini_options]
env = [
    "INPUT_FILE=simple_input.csv"
]
